[gd_scene load_steps=32 format=3 uid="uid://e1lwibw6g3hw"]

[ext_resource type="Script" path="res://scripts/enemies_AI/Bat.gd" id="1_gdqi4"]
[ext_resource type="Texture2D" uid="uid://cw8gx5f8oren5" path="res://textures/enemies/bat/Flying (46x30).png" id="2_dgq1u"]
[ext_resource type="Texture2D" uid="uid://dvpjl3ui3kutc" path="res://textures/obstacles/saw/Idle (46x30).png" id="3_tkfc3"]
[ext_resource type="Texture2D" uid="uid://c5cg5ygsvl71j" path="res://textures/enemies/bat/Hit (46x30).png" id="4_gh7qj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_isnxj"]
size = Vector2(82, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_33lce"]
atlas = ExtResource("2_dgq1u")
region = Rect2(0, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkapy"]
atlas = ExtResource("2_dgq1u")
region = Rect2(46, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8ehp"]
atlas = ExtResource("2_dgq1u")
region = Rect2(92, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_nc6eu"]
atlas = ExtResource("2_dgq1u")
region = Rect2(138, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_cn4u8"]
atlas = ExtResource("2_dgq1u")
region = Rect2(184, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_atcmt"]
atlas = ExtResource("2_dgq1u")
region = Rect2(230, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgqn1"]
atlas = ExtResource("2_dgq1u")
region = Rect2(276, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ief3"]
atlas = ExtResource("3_tkfc3")
region = Rect2(0, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_gj2ks"]
atlas = ExtResource("3_tkfc3")
region = Rect2(46, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1rac"]
atlas = ExtResource("3_tkfc3")
region = Rect2(92, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcqpm"]
atlas = ExtResource("3_tkfc3")
region = Rect2(138, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_aly2d"]
atlas = ExtResource("3_tkfc3")
region = Rect2(184, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_yr7lu"]
atlas = ExtResource("3_tkfc3")
region = Rect2(230, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_lu788"]
atlas = ExtResource("3_tkfc3")
region = Rect2(276, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwsec"]
atlas = ExtResource("3_tkfc3")
region = Rect2(322, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_tswxi"]
atlas = ExtResource("3_tkfc3")
region = Rect2(368, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_gckyg"]
atlas = ExtResource("3_tkfc3")
region = Rect2(414, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_h61jr"]
atlas = ExtResource("3_tkfc3")
region = Rect2(460, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv8o2"]
atlas = ExtResource("3_tkfc3")
region = Rect2(506, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2013"]
atlas = ExtResource("4_gh7qj")
region = Rect2(0, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpsux"]
atlas = ExtResource("4_gh7qj")
region = Rect2(46, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqfuy"]
atlas = ExtResource("4_gh7qj")
region = Rect2(92, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdc3j"]
atlas = ExtResource("4_gh7qj")
region = Rect2(138, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_oae46"]
atlas = ExtResource("4_gh7qj")
region = Rect2(184, 0, 46, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_1a2pi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_33lce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkapy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8ehp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nc6eu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cn4u8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_atcmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgqn1")
}],
"loop": true,
"name": &"chasing",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ief3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gj2ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1rac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcqpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aly2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yr7lu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu788")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwsec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tswxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gckyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h61jr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vv8o2")
}],
"loop": true,
"name": &"default",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2013")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpsux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqfuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdc3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oae46")
}],
"loop": true,
"name": &"dying",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ym2m8"]
radius = 334.006

[node name="Bat" type="CharacterBody2D"]
position = Vector2(4611, 2131)
script = ExtResource("1_gdqi4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_isnxj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_1a2pi")
animation = &"dying"
autoplay = "default"
frame_progress = 0.614688

[node name="detection_area" type="Area2D" parent="."]
light_mask = 2
visibility_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
light_mask = 2
visibility_layer = 2
shape = SubResource("CircleShape2D_ym2m8")

[node name="collision_up_1" type="RayCast2D" parent="."]
position = Vector2(-29, -13)
target_position = Vector2(0, -10)

[node name="collision_up_2" type="RayCast2D" parent="."]
position = Vector2(23, -13)
target_position = Vector2(0, -10)

[node name="collision_down_1" type="RayCast2D" parent="."]
position = Vector2(-34, 14)
target_position = Vector2(0, 10)

[node name="collision_down_2" type="RayCast2D" parent="."]
position = Vector2(24, 14)
target_position = Vector2(0, 10)

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
